--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <%- include('../partials/header') %>
-  <link rel="stylesheet" href="css/login.css">
+  <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
   <main>
