--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
-  <main>
+  <main class="reg-log">
     <%- include('../partials/nav') %>
     <div class="login-container">
       <div class="card">
