--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="css/register.css">
 </head>
 <body>
-  <main>
+  <main class="reg-log">
     <%- include('../partials/nav') %>
     <form action="mailto:dustin.shulz@gmail.com" method="get" id="frm">
       <fieldset id="fld">
