--- a/views/pages/images.ejs
+++ b/views/pages/images.ejs
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Images Subdirectory</title>
+  <%- include('../partials/header') %>
+  <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
-  <h1>Images Subdirectory</h1>
-  <p>Please type a number between 1 and 12 following the images subdirectory  in the address bar above to navigate to a single image page. For example: /images/5</p>
+  <main>
+    <%- include('../partials/nav') %>
+    <h1>Images Subdirectory</h1>
+    <div class="images-sub">
+      <p>Please type a number between 1 and 12 following the images subdirectory in the address bar above to navigate to a single image page.
+      </p>
+      <p>For example: /images/5
+      </p>
+    </div>
+  </main>
+  <%- include('../partials/footer') %>
 </body>
 </html>
