added updated instructions for images subdir and deleted old html files

--- a/views/pages/images.ejs
+++ b/views/pages/images.ejs
@@ -9,9 +9,9 @@
     <%- include('../partials/nav') %>
     <h1>Images Subdirectory</h1>
     <div class="images-sub">
-      <p>Please type a number between 1 and 12 following the images subdirectory in the address bar above to navigate to a single image page.
+      <p>Please type a number between 1 and 12 following the images/ subdirectory in the address bar above to navigate to a single image page.
       </p>
-      <p>For example: /images/5
+      <p>For example: https://sait-cpnt262-a5.herokuapp.com/images/5
       </p>
     </div>
   </main>
