--- a/views/pages/images.ejs
+++ b/views/pages/images.ejs
@@ -7,12 +7,10 @@
 <body>
   <main>
     <%- include('../partials/nav') %>
-    <h1>Images Subdirectory</h1>
     <div class="images-sub">
-      <p>Please type a number between 1 and 12 following the images/ subdirectory in the address bar above to navigate to a single image page.
-      </p>
-      <p>For example: https://sait-cpnt262-a5.herokuapp.com/images/5
-      </p>
+      <h1><%=pageTitle%></h1>
+      <p>Please type a number between 1 and 12 following the images/ subdirectory in the address bar above to navigate to a single image page.</p>
+      <p>For example: https://sait-cpnt262-a5.herokuapp.com/images/5</p>
     </div>
   </main>
   <%- include('../partials/footer') %>
